Tweaks to QUnit tests

--- a/lib/javascript/test/index.html
+++ b/lib/javascript/test/index.html
@@ -12,7 +12,7 @@
   <script src="../js/newaeondate.js"></script>
 
   <!-- Include the test suite(s) -->
-  <script src="tests.js"></script>
+  <script src="newAeonDate.test.js"></script>
 </head>
 <body>
   <div id="qunit"></div>
