Typo fix in test fixture

--- a/lib/javascript/test/index.html
+++ b/lib/javascript/test/index.html
@@ -9,10 +9,10 @@
   <script src="http://code.jquery.com/qunit/qunit-1.12.0.js"></script>
 
   <!-- Include the source code -->
-  <script src="../js/newaeondate.js"></script>
+  <script src="../js/newAeonDate.js"></script>
 
   <!-- Include the test suite(s) -->
-  <script src="newAeonDate.test.js"></script>
+  <script src="./newAeonDate.test.js"></script>
 </head>
 <body>
   <div id="qunit"></div>
